--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang ="es">
 	<head>
 		<meta charset="utf-8" />
-		<title>Preguntas</title>
+		<title><%= title %></title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<script src="localhost:3000"></script>  
@@ -17,6 +17,7 @@
 			<nav class="main" id="n1" role="navigation">
 				<span><a href="/">Inicio</a></span>
 				<span><a href="/quizes/question">Preguntas</a></span>
+				<span><a href="/author">Créditos</a></span>
 			</nav>
 		
 			<section class="main" id="s1">
@@ -24,7 +25,7 @@
 			</section>
 		
 			<footer class="main" id="f1">
-				<a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un "Quiz"?</a>
+				<a href="https://github.com/adnprogramador/quizadn">Mi proyecto "Quiz" en GitHub.</a>
 			</footer>
 		</div>
 	</body>
