--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,8 +2,15 @@
 <html lang ="es">
 	<head>
 		<meta charset="utf-8" />
-		<title><%= title %></title>
-		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<title>Preguntas</title>
+		<link rel='stylesheet' href='/stylesheets/style.css' /><link rel='stylesheet' 
+        type='text/css'
+        media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+        href='/stylesheets/wide.css' />
+  <link rel='stylesheet'
+        type='text/css'
+        media='only screen and (max-width: 480px)' 
+        href='/stylesheets/smartphone.css' />
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<script src="localhost:3000"></script>  
 	</head>
@@ -11,17 +18,26 @@
 	<body>
 		<div id="page-wrap">
 			<header class="main" id="h1">
-				<h2>Quiz: el juego de las preguntas.</h2>
+				<h2><span>Quiz:</span> el juego de las preguntas.</h2>
 			</header>
 		
 			<nav class="main" id="n1" role="navigation">
 				<span><a href="/">Inicio</a></span>
-				<span><a href="/quizes/question">Preguntas</a></span>
+				<span><a href="/quizes">Preguntas</a></span>
 				<span><a href="/author">Créditos</a></span>
 			</nav>
 		
 			<section class="main" id="s1">
-				<%- body %>
+				<% if(errors.length) { %>
+					<span id="ErrorMsgs">Corregir errores:</br>
+					<% for (var i in errors) { %>
+						<span> <%= errors[i].message %> </span></br>
+					<% } %>
+					</span>
+				<% } %>
+				<div>
+					<%- body %>
+				</div>
 			</section>
 		
 			<footer class="main" id="f1">
